--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.24.0",
     "date-fns": "^2.25.0",
     "expo": "~43.0.0",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
     "expo-splash-screen": "~0.13.3",
     "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.5",
+    "expo-updates": "~0.10.6",
     "intl": "^1.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
